--- a/flight-tracker.html
+++ b/flight-tracker.html
@@ -7,7 +7,8 @@
   <title>Flight Tracker</title>
   <meta name="description" content="List all real-time flights in an area">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="flight-tracker.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -20,19 +21,306 @@
   <script defer src="https://berkerol.github.io/libraries/form.js"></script>
   <script defer src="countries.js"></script>
   <script defer src="flight-tracker.js"></script>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      min-height: 100vh;
+      overflow-x: hidden;
+      position: relative;
+    }
+
+    body::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    .container {
+      position: relative;
+      z-index: 2;
+      padding: 40px 0;
+    }
+
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 800;
+      text-align: center;
+      color: #f8f9fa;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+      margin-bottom: 30px;
+      animation: fadeInDown 1s ease-in-out;
+    }
+
+    .settings-btn {
+      background: #007bff;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      margin-right: 10px;
+    }
+
+    .settings-btn:hover {
+      background: #0056b3;
+    }
+
+    .bottom-buttons {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 10px;
+    }
+
+    .modal-content {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    }
+
+    .modal-header {
+      border-bottom: none;
+      background: #007bff;
+      color: #fff;
+      border-radius: 15px 15px 0 0;
+    }
+
+    .modal-title {
+      font-weight: 600;
+    }
+
+    .modal-body {
+      padding: 20px;
+    }
+
+    .form-label {
+      color: #333;
+      font-weight: 600;
+    }
+
+    .form-control {
+      border-radius: 10px;
+      box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-check-label {
+      color: #333;
+      margin-left: 10px;
+    }
+
+    .btn-primary {
+      background: #007bff;
+      border: none;
+      border-radius: 25px;
+      padding: 10px 20px;
+      font-weight: 600;
+      transition: background 0.3s ease;
+    }
+
+    .btn-primary:hover {
+      background: #0056b3;
+    }
+
+    .table {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+      overflow: hidden;
+      animation: slideUp 1s ease-in-out;
+    }
+
+    .table thead th {
+      background: #007bff;
+      color: #fff;
+      font-weight: 600;
+      text-transform: uppercase;
+      border: none;
+      padding: 15px;
+    }
+
+    .table tbody tr {
+      transition: all 0.3s ease;
+    }
+
+    .table tbody tr:hover {
+      background: #e9ecef;
+      transform: scale(1.02);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .table td {
+      padding: 15px;
+      vertical-align: middle;
+      color: #333;
+    }
+
+    .flight-icon {
+      font-size: 1.5rem;
+      color: #007bff;
+      margin-right: 10px;
+    }
+
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 768px) {
+      h1 { font-size: 2.5rem; }
+      .table { font-size: 0.9rem; }
+      .bottom-buttons { flex-direction: column; gap: 5px; left: 20px; transform: none; }
+      .settings-btn { padding: 8px 15px; }
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
+    <h1><i class="fas fa-plane-departure flight-icon"></i> Flight Tracker</h1>
     <div class="d-flex justify-content-center mt-3">
       <table class="table table-striped table-hover">
         <thead>
+          <tr>
+            <th>Flight</th>
+            <th>Origin</th>
+            <th>Destination</th>
+            <th>Status</th>
+          </tr>
         </thead>
         <tbody>
+          <tr>
+            <td><i class="fas fa-plane flight-icon"></i> BA123</td>
+            <td>London (LHR)</td>
+            <td>New York (JFK)</td>
+            <td>On Time</td>
+          </tr>
+          <tr>
+            <td><i class="fas fa-plane flight-icon"></i> AF456</td>
+            <td>Paris (CDG)</td>
+            <td>Tokyo (NRT)</td>
+            <td>Delayed</td>
+          </tr>
         </tbody>
       </table>
     </div>
+    <div class="bottom-buttons">
+      <button class="btn btn-success">Refresh</button>
+      <button class="btn btn-primary">Use my Location</button>
+      <button class="settings-btn" data-bs-toggle="modal" data-bs-target="#settingsModal">Settings</button>
+    </div>
   </div>
+
+  <!-- Settings Modal -->
+  <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="settingsModalLabel">Settings</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="settingsForm">
+            <div class="row g-2 mb-3">
+              <div class="col">
+                <label for="topCoordInput" class="form-label">Top Coordinate</label>
+                <input type="number" step="0.1" class="form-control" id="topCoordInput" placeholder="e.g., 50">
+              </div>
+              <div class="col">
+                <label for="bottomCoordInput" class="form-label">Bottom Coordinate</label>
+                <input type="number" step="0.1" class="form-control" id="bottomCoordInput" placeholder="e.g., 47.9">
+              </div>
+              <div class="col">
+                <label for="leftCoordInput" class="form-label">Left Coordinate</label>
+                <input type="number" step="0.1" class="form-control" id="leftCoordInput" placeholder="e.g., 11.3">
+              </div>
+              <div class="col">
+                <label for="rightCoordInput" class="form-label">Right Coordinate</label>
+                <input type="number" step="0.1" class="form-control" id="rightCoordInput" placeholder="e.g., 11.8">
+              </div>
+            </div>
+            <div class="row g-2 mb-3">
+              <div class="col">
+                <label for="latRangeInput" class="form-label">Latitude Range</label>
+                <input type="number" step="0.1" class="form-control" id="latRangeInput" placeholder="e.g., 0.3">
+              </div>
+              <div class="col">
+                <label for="lonRangeInput" class="form-label">Longitude Range</label>
+                <input type="number" step="0.1" class="form-control" id="lonRangeInput" placeholder="e.g., 0.3">
+              </div>
+            </div>
+            <div class="mb-3">
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="groundCheck">
+                <label class="form-check-label" for="groundCheck">Ground</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="airCheck">
+                <label class="form-check-label" for="airCheck">Air</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="vehiclesCheck">
+                <label class="form-check-label" for="vehiclesCheck">Vehicles</label>
+              </div>
+              <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="glidersCheck">
+                <label class="form-check-label" for="glidersCheck">Gliders</label>
+              </div>
+            </div>
+            <div class="form-check mb-3">
+              <input type="checkbox" class="form-check-input" id="highAccuracyCheck">
+              <label class="form-check-label" for="highAccuracyCheck">High Accuracy</label>
+            </div>
+            <div class="form-check mb-3">
+              <input type="checkbox" class="form-check-input" id="hideCoordsCheck">
+              <label class="form-check-label" for="hideCoordsCheck">Hide Coordinates Card</label>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Save</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Handle settings form submission
+    document.getElementById('settingsForm').addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      // Fetch coordinates from the form (for use in flight-tracker.js if needed)
+      const topCoord = document.getElementById('topCoordInput').value;
+      const bottomCoord = document.getElementById('bottomCoordInput').value;
+      const leftCoord = document.getElementById('leftCoordInput').value;
+      const rightCoord = document.getElementById('rightCoordInput').value;
+      const latRange = document.getElementById('latRangeInput').value;
+      const lonRange = document.getElementById('lonRangeInput').value;
+
+      console.log('Saved Coordinates:', { topCoord, bottomCoord, leftCoord, rightCoord, latRange, lonRange });
+
+      // Toggle coordinates card visibility (no effect since card is removed)
+      const hideCoords = document.getElementById('hideCoordsCheck').checked;
+
+      // Close modal
+      const modal = bootstrap.Modal.getElementById('settingsModal');
+      modal.hide();
+    });
+  </script>
 </body>
 
 </html>
